--- a/Mockup/indextest.html
+++ b/Mockup/indextest.html
@@ -13,10 +13,9 @@
 	<body>
 		<nav class="navbar navbar-default">
 			<div class="container-fluid">
-			<a class="navbar-brand" id="logo" title="bk portfolio" href="bkyttledesign.com">
-						<img src="images/logobk.png">
-					</a>
-
+				<a class="navbar-brand" id="logo" title="bk portfolio" href="bkyttledesign.com">
+					<img src="images/logobk.png">
+				</a>
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -30,28 +29,39 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="/editorial.html">editorial</a></li>
-						<li><a href="/branding.html">branding</a></li>
-						<li><a href="/package.html">package</a></li>
-						<li><a href="/ads.html">ads</a></li>
-						<li><a href="/web.html">web</a></li>
-					</ul>	
+							<li><a href="/editorial.html">editorial</a></li>
+							<li><a href="/branding.html">branding</a></li>
+							<li><a href="/package.html">package</a></li>
+							<li><a href="/ads.html">ads</a></li>
+							<li><a href="/web.html">web</a></li>
+					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
 				
+	<section class="container">
+		<div class="row">
+		</div>
+	
+	</section>
 		<section class="container">
-			<div class="row">
+			<div class="col"><img src="images/artwork/thumbbeatles.jpg"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+			
 				
-			</div>
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+			
+			
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+		
 		</section>
-		<section class="container">
-			<div class="row">
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-				<div class="col"></div>
-			</div>
-		</section>
-	</body>
+</body>
 </html>
